--- a/index.html
+++ b/index.html
@@ -1,199 +1,160 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="pl">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FreeFlow – Voice to Order</title>
-
-  <!-- Font zbliżony do stylu logotypu (script) -->
-  <link href="https://fonts.googleapis.com/css2?family=Pacifico&family=Inter:wght@400;600&display=swap" rel="stylesheet">
-
-  <style>
-    :root{
-      --bg:#0b0c0f;
-      --panel:#111319;
-      --text:#e9e9ec;
-      --muted:#b9bdc7;
-      --brand:#ff7a1a;
-      --brand2:#ffb347;
-      --glow: rgba(255,122,26,.45);
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%}
-    body{
-      margin:0; background:radial-gradient(1200px 800px at 50% -200px,#12141a 0%, var(--bg) 55%);
-      color:var(--text); font-family:Inter,system-ui,Arial,Helvetica,sans-serif;
-      -webkit-font-smoothing:antialiased; text-rendering:optimizeLegibility;
-    }
-
-    .wrap{max-width:980px; margin:0 auto; padding:24px 20px 28dvh}
-
-    /* Nagłówek */
-    .brand{
-      font-family:Pacifico, cursive;
-      font-size: clamp(38px, 7.5vw, 82px);
-      line-height: .95;
-      letter-spacing:.5px;
-      margin: 8px 0 6px;
-      background: linear-gradient(180deg, var(--brand) 0%, var(--brand2) 100%);
-      -webkit-background-clip:text; background-clip:text; color:transparent;
-      text-shadow: 0 8px 28px rgba(255,122,26,.15);
-      text-align:center;
-    }
-    .h1{font-size:clamp(24px,4.5vw,42px); font-weight:800; margin: 0 0 6px; text-align:center}
-    .sub{color:var(--muted); font-size:clamp(14px,2.9vw,18px); text-align:center; margin:0 0 24px}
-
-    /* Przycisk–logo (bez napisu) */
-    .mic-btn{
-      position:relative; border:none; background:transparent; outline:none; cursor:pointer;
-      width:min(60vw, 360px); aspect-ratio:1/1; display:grid; place-items:center;
-      margin: 18px auto 12px; filter: drop-shadow(0 18px 50px rgba(0,0,0,.5));
-    }
-    .mic-btn img{
-      width:100%; height:100%; object-fit:contain; pointer-events:none; user-select:none;
-      transition: transform .6s cubic-bezier(.2,.7,.2,1), filter .3s ease;
-      filter: drop-shadow(0 0 0 rgba(255,122,26,0));
-    }
-    /* stan słuchania = puls + obrót + neonowa poświata */
-    .mic-btn.listening img{
-      animation: spin 6s linear infinite;
-      filter: drop-shadow(0 0 18px var(--glow)) drop-shadow(0 0 48px rgba(255,122,26,.25));
-    }
-    @keyframes spin{ to{ transform: rotate(360deg) scale(1.02);} }
-
-    .hint{
-      text-align:center; color:#d9dde6; opacity:.9;
-      font-size:clamp(14px,3.4vw,18px); margin: 2px 0 22px;
-    }
-
-    /* Kapsuła z podpowiedziami + transkrypt */
-    .card{
-      background: linear-gradient(180deg, rgba(255,255,255,.04), rgba(255,255,255,.02));
-      border:1px solid rgba(255,255,255,.06);
-      border-radius:18px; padding:16px; max-width:900px; margin: 8px auto;
-      box-shadow: 0 10px 30px rgba(0,0,0,.25) inset, 0 12px 40px rgba(0,0,0,.25);
-    }
-    .chips{display:flex; flex-wrap:wrap; gap:12px; justify-content:center; margin:4px 0 14px}
-    .chip{
-      padding:10px 14px; border-radius:14px; background:#12141a; color:#cfd5df;
-      border:1px solid rgba(255,255,255,.08); font-size:15px;
-    }
-    .log{
-      margin:6px auto 0; padding:14px 16px; border-radius:14px;
-      background:#0e0f14; color:#dfe3ea; font-size:16px; line-height:1.5;
-      border:1px solid rgba(255,255,255,.06);
-    }
-
-    /* Przyklejony wskaźnik stanu (3 kropki) */
-    .dots{display:flex; justify-content:center; gap:10px; margin-top:10px}
-    .dot{width:8px; height:8px; border-radius:999px; background:#2a2f38; opacity:.6}
-    .dot.on{background:var(--brand); opacity:1; box-shadow: 0 0 16px var(--glow)}
-
-    /* Responsywne odsunięcie, by treść nie zderzała się z krawędzią */
-    @media (min-width:880px){ .wrap{padding-bottom:22dvh} }
-  </style>
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>FreeFlow – Voice Button Demo</title>
+<style>
+  :root{
+    --bg:#0b0f14; --text:#e7edf6;
+    --brand1:#ff7a1a; --brand2:#ff3c00; --glow:#ff7a1a;
+    --size: 240px;
+  }
+  *{box-sizing:border-box}
+  html,body{height:100%}
+  body{
+    margin:0; display:grid; place-items:center; gap:22px;
+    background: radial-gradient(1200px 800px at 50% -10%, #111928 0%, #0a0e14 30%, var(--bg) 60%);
+    color:var(--text); font:500 18px/1.35 Inter, system-ui, -apple-system, "Segoe UI", Roboto, Arial;
+    text-align:center; padding:22px;
+  }
+  h1{margin:0; font-weight:800; font-size:48px; letter-spacing:.3px;
+     color:var(--brand1); text-shadow:0 8px 24px rgba(255,122,26,.18)}
+  h2{margin:6px 0 18px; font-weight:700; font-size:32px}
+  p.lead{margin:0 0 10px; opacity:.75}
+  /* PRZYCISK */
+  .mic-btn{
+    position:relative; width:var(--size); height:var(--size);
+    border:none; border-radius:999px; cursor:pointer; isolation:isolate;
+    background: radial-gradient(60% 60% at 35% 30%, #1b2635 0%, #0d131c 70%) padding-box,
+                conic-gradient(from 0deg, #ffb86b, #ff7a1a, #ff3c00, #ff7a1a, #ffb86b) border-box;
+    box-shadow:
+      inset 0 6px 18px rgba(255,255,255,.08),
+      inset 0 -12px 28px rgba(0,0,0,.5),
+      0 14px 28px rgba(0,0,0,.55),
+      0 0 22px 6px rgba(255,122,26,.25);
+    outline:none; -webkit-tap-highlight-color:transparent; overflow:hidden;
+  }
+  .mic-btn::after{
+    content:""; position:absolute; inset:16%;
+    background:url("./Freeflow-logo.png") center/contain no-repeat; /* <-- Twój plik */
+    filter: drop-shadow(0 6px 18px rgba(255,122,26,.35));
+    transition: transform .25s ease;
+  }
+  .mic-btn::before{
+    content:""; position:absolute; inset:-35%;
+    background: radial-gradient(60% 60% at 50% 50%, rgba(255,122,26,.28), transparent 60%);
+    filter: blur(24px); z-index:-1; transition: opacity .3s ease;
+  }
+  .rings{ pointer-events:none; position:absolute; inset:0; border-radius:50% }
+  .rings::before, .rings::after{
+    content:""; position:absolute; inset:6%; border-radius:50%;
+    border:2px solid rgba(255,122,26,.45);
+    filter: blur(.3px) drop-shadow(0 0 8px rgba(255,122,26,.35));
+    animation: ring 2.6s ease-out infinite;
+  }
+  .rings::after{ inset:14%; animation-delay:1.3s; opacity:.7}
+  @keyframes ring{
+    0%{transform:scale(.85); opacity:.85}
+    70%{transform:scale(1.25); opacity:.08}
+    100%{transform:scale(1.4); opacity:0}
+  }
+  .mic-btn.listening::after{ animation:spin 2.4s linear infinite }
+  @keyframes spin{ to{ transform:rotate(360deg) } }
+  .mic-btn:active{ transform: translateY(1px) scale(.99) }
+  .mic-btn:hover::after{ transform:scale(1.02) }
+  .mic-btn:hover::before{ opacity:1 }
+  .hint{ margin-top:10px; font-size:14px; color:#ffbfa0; opacity:.8; animation: breathe 3.2s ease-in-out infinite }
+  @keyframes breathe{ 0%,100%{opacity:.6} 50%{opacity:.98} }
+  .log{
+    width:min(720px, 100%); text-align:left; margin-top:8px;
+    background:#0d131b; border:1px solid rgba(255,255,255,.06);
+    box-shadow:0 6px 26px rgba(0,0,0,.45); border-radius:16px; padding:16px;
+  }
+  .bubble{
+    display:inline-block; margin:8px 0; padding:12px 16px; border-radius:14px;
+    background:#111a25; color:#dfe7f3; border:1px solid rgba(255,255,255,.06);
+  }
+  .me{ background:#0f1620; opacity:.9 }
+  .as{ background:#14202d; border-color:rgba(255,122,26,.25) }
+  @media (max-width:420px){ h1{font-size:40px} h2{font-size:28px} :root{--size:210px} }
+  @media (prefers-reduced-motion:reduce){
+    .rings,.mic-btn.listening::after,.hint{animation:none}
+  }
+</style>
 </head>
 <body>
-  <main class="wrap">
-    <div class="brand">FreeFlow</div>
-    <h1 class="h1">Złóż zamówienie</h1>
-    <p class="sub">Taxi, posiłek, a może nocleg?</p>
+  <header>
+    <h1>FreeFlow</h1>
+    <h2>Złóż zamówienie</h2>
+    <p class="lead">Taxi, posiłek, a może nocleg?</p>
+  </header>
 
-    <!-- PRZYCISK: mikrofon bez napisu (sam orb) -->
-    <button id="micBtn" class="mic-btn" aria-label="Naciśnij, aby mówić">
-      <img src="mic-orb.png" alt="FreeFlow – mikrofon" />
-    </button>
-    <div class="hint" id="hint">Dotknij, aby mówić</div>
+  <button class="mic-btn" id="mic" aria-pressed="false" aria-label="Naciśnij, aby mówić">
+    <span class="rings" aria-hidden="true"></span>
+  </button>
+  <div class="hint" id="hint">Naciśnij i mów: „dwie pizze pepperoni”, „zamów taxi…”, „hotel w Krakowie…”</div>
 
-    <section class="card">
-      <div class="chips">
-        <span class="chip">„dwie pizze pepperoni”</span>
-        <span class="chip">„zamów taxi na Dworzec”</span>
-        <span class="chip">„hotel w Krakowie od piątku na 2 noce”</span>
-      </div>
-      <div class="log" id="log">Jeszcze nic nie nagrano.</div>
-      <div class="dots"><span class="dot" id="d1"></span><span class="dot" id="d2"></span><span class="dot" id="d3"></span></div>
-    </section>
-  </main>
+  <section class="log" id="log" aria-live="polite" aria-atomic="true">
+    <div class="bubble as">Witaj! Kliknij przycisk i powiedz, czego potrzebujesz.</div>
+  </section>
 
-  <script>
-    // --- Web Speech demo (rozpoznawanie + synteza) ---
-    const micBtn = document.getElementById('micBtn');
-    const hint   = document.getElementById('hint');
-    const logEl  = document.getElementById('log');
-    const dots   = [document.getElementById('d1'), document.getElementById('d2'), document.getElementById('d3')];
+<script>
+(() => {
+  const mic = document.getElementById('mic');
+  const log = document.getElementById('log');
+  const hint = document.getElementById('hint');
 
-    let rec, listening = false, dotI = 0, dotTimer;
+  const speak = (txt) => {
+    try{
+      const u = new SpeechSynthesisUtterance(txt);
+      u.lang = 'pl-PL';
+      u.rate = 1.02; u.pitch = 1.0;
+      speechSynthesis.cancel(); speechSynthesis.speak(u);
+    }catch(e){}
+  };
+  const add = (txt, who='as') => {
+    const b = document.createElement('div');
+    b.className = `bubble ${who}`; b.textContent = txt;
+    log.appendChild(b); log.scrollTop = log.scrollHeight;
+  };
 
-    function setDots(on){
-      dots.forEach(d=>d.classList.remove('on'));
-      if(on){ dots[dotI%3].classList.add('on'); dotI++; }
+  let rec, listening = false;
+  const supportsASR = 'webkitSpeechRecognition' in window || 'SpeechRecognition' in window;
+
+  const start = () => {
+    if(!supportsASR){ add('Twoja przeglądarka nie wspiera rozpoznawania mowy.', 'as'); return; }
+    const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
+    rec = new SR(); rec.lang = 'pl-PL'; rec.interimResults = false; rec.continuous = false;
+    rec.onstart = () => { listening = true; mic.classList.add('listening'); mic.setAttribute('aria-pressed','true'); hint.textContent='Słucham…' };
+    rec.onresult = (e) => {
+      const txt = (e.results[0] && e.results[0][0] && e.results[0][0].transcript) || '';
+      add('Ty: ' + txt, 'me'); respond(txt.toLowerCase());
+    };
+    rec.onerror = (e) => add('Błąd mikrofonu: ' + e.error, 'as');
+    rec.onend = () => { listening = false; mic.classList.remove('listening'); mic.setAttribute('aria-pressed','false'); hint.textContent='Naciśnij i mów…' };
+    rec.start();
+  };
+  const stop = () => { try{ rec && rec.stop(); }catch(e){} };
+
+  function respond(t){
+    let ans = 'Jasne, zapisałem.';
+    if(t.includes('pizza') || t.includes('pizzę') || t.includes('pizze')){
+      ans = 'Zamówienie na pizzę zanotowane. Jaki rozmiar i ile sztuk?';
+    } else if(t.includes('taxi')){
+      ans = 'Zamawiam taxi. Podaj adres startu i cel podróży.';
+    } else if(t.includes('hotel')){
+      ans = 'Szukam hotelu. Podaj miasto i daty przyjazdu oraz wyjazdu.';
+    } else if(t.includes('anuluj') || t.includes('stop')){
+      ans = 'Anulowano. Powiedz, gdy będziesz gotowy.';
+    } else if(t.trim()===''){
+      ans = 'Nie dosłyszałem. Powtórz proszę.';
     }
-    function startDots(){ stopDots(); dotTimer = setInterval(()=>setDots(true), 400); }
-    function stopDots(){ clearInterval(dotTimer); dots.forEach(d=>d.classList.remove('on')); }
+    add('Asystent: ' + ans, 'as'); speak(ans);
+  }
 
-    function speak(text){
-      try{
-        const u = new SpeechSynthesisUtterance(text);
-        u.lang = 'pl-PL'; u.rate = 1; u.pitch = 1;
-        speechSynthesis.cancel(); speechSynthesis.speak(u);
-      }catch(e){}
-    }
-
-    function ensureRecognizer(){
-      if(rec) return rec;
-      const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
-      if(!SR){ logEl.textContent = 'Twoja przeglądarka nie obsługuje rozpoznawania mowy.'; return null; }
-      rec = new SR();
-      rec.lang = 'pl-PL'; rec.interimResults = false; rec.maxAlternatives = 1;
-      rec.onresult = (e)=>{
-        const text = e.results[0][0].transcript.trim();
-        logEl.textContent = 'Ty: ' + text;
-        // BARDZO PROSTY routing do odpowiedzi demo:
-        let reply = 'Jasne! Co dokładnie podać?';
-        const t = text.toLowerCase();
-        if(t.includes('pizza') || t.includes('pizze')) reply = 'OK! Jakie rozmiary i z czym?';
-        else if(t.includes('taxi')) reply = 'Zamawiam taxi. Skąd i dokąd jedziemy?';
-        else if(t.includes('hotel')) reply = 'Szukam hotelu. Podaj miasto oraz daty przyjazdu i wyjazdu.';
-        logEl.textContent += '\nAsystent: ' + reply;
-        speak(reply);
-      };
-      rec.onstart = ()=>{
-        listening = true;
-        micBtn.classList.add('listening');
-        hint.textContent = 'Słucham… mów teraz';
-        startDots();
-      };
-      rec.onend = ()=>{
-        listening = false;
-        micBtn.classList.remove('listening');
-        hint.textContent = 'Dotknij, aby mówić';
-        stopDots();
-      };
-      rec.onerror = (e)=>{
-        listening = false;
-        micBtn.classList.remove('listening');
-        hint.textContent = 'Błąd rozpoznawania. Spróbuj ponownie.';
-        stopDots();
-      };
-      return rec;
-    }
-
-    micBtn.addEventListener('click', ()=>{
-      const r = ensureRecognizer(); if(!r) return;
-      if(listening){ r.stop(); return; }
-      r.start();
-    });
-
-    // Tap na przykładowych chipach
-    document.querySelectorAll('.chip').forEach(ch=>{
-      ch.addEventListener('click', ()=>{
-        const text = ch.textContent.replace(/[„”]/g,'').trim();
-        logEl.textContent = 'Ty: ' + text;
-        speak('OK, ' + text);
-      });
-    });
-  </script>
+  mic.addEventListener('click', () => listening ? stop() : start());
+})();
+</script>
 </body>
 </html>
