--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <style>
   :root{
     --bg:#0b0f12; --panel:#12171c; --muted:#93a0ad;
-    --text:#e8eef5; --accent:#ff7a1a; --glow:#ff6a00;
+    --text:#e8eef5; --accent:#ff7a1a;
   }
   *{box-sizing:border-box}
   html,body{height:100%;background:radial-gradient(1200px 600px at 50% -200px,#12171c 0%,#0b0f12 55%),var(--bg);margin:0;color:var(--text);font-family:system-ui,-apple-system,Segoe UI,Roboto,Inter,Arial,sans-serif}
-  .wrap{max-width:980px;margin:0 auto;padding:20px 16px 80px}
-  header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:12px}
+  .wrap{max-width:980px;margin:0 auto;padding:20px 16px 90px}
+  header{display:flex;align-items:center;justify-content:space-between;gap:12px;margin-bottom:10px}
   .brand{display:flex;align-items:center;gap:.6rem;font-weight:800;font-size:clamp(26px,4.4vw,38px)}
-  .brand .dot{color:var(--accent)}
+  .brand .em{color:var(--accent)}
   .top-actions{display:flex;gap:10px}
-  .btn-icon{background:#0f1419;border:1px solid #1f2933;color:#cde; padding:10px 12px;border-radius:14px;display:inline-flex;align-items:center;gap:10px;box-shadow:inset 0 0 0 1px rgba(255,255,255,.04)}
+  .btn-icon{background:#0f1419;border:1px solid #1f2933;color:#cde; padding:10px 12px;border-radius:14px;display:inline-flex;align-items:center;gap:10px}
   .cart-dot{background:var(--accent);color:#000;border-radius:999px;font-weight:700;font-size:12px;padding:2px 7px}
-  h1{font-size:clamp(30px,7.6vw,56px);line-height:1.05;margin:.2rem 0}
-  .sub{color:#c0cad5;margin:6px 0 22px;font-size:clamp(15px,2.9vw,20px)}
+  h1{font-size:clamp(30px,7.6vw,56px);line-height:1.05;margin:.3rem 0}
+  .sub{color:#c0cad5;margin:6px 0 20px;font-size:clamp(15px,2.9vw,20px)}
 
   /* === LOGO AS BUTTON === */
   .hero{display:grid;place-items:center;margin:6px 0 14px}
@@ -29,64 +29,72 @@
     background:#000 center/contain no-repeat url("Freeflow-logo.png");
     border-radius:999px; cursor:pointer; position:relative;
     transition:transform .2s ease, filter .2s ease;
-    box-shadow:
-      0 0 0 1px rgba(255,255,255,.06),
-      0 18px 60px rgba(0,0,0,.55);
+    box-shadow:0 0 0 1px rgba(255,255,255,.06),0 18px 60px rgba(0,0,0,.55);
   }
   #micBtn:hover{transform:translateY(-1px); filter:saturate(1.05)}
   #micBtn:active{transform:translateY(1px) scale(.995)}
-
-  /* listening glow */
   .listening{
     animation:pulse 1.6s ease-in-out infinite;
-    box-shadow:
-      0 0 0 2px rgba(255,255,255,.06),
-      0 28px 90px rgba(255,106,0,.25),
-      0 0 44px 8px rgba(255,106,0,.35);
+    box-shadow:0 0 0 2px rgba(255,255,255,.06),0 28px 90px rgba(255,106,0,.25),0 0 44px 8px rgba(255,106,0,.35);
     filter:saturate(1.15);
   }
-  @keyframes pulse{
-    0%{outline:0 solid rgba(255,106,0,.0)}
-    50%{outline:10px solid rgba(255,106,0,.12)}
-    100%{outline:0 solid rgba(255,106,0,.0)}
-  }
+  @keyframes pulse{0%{outline:0 solid rgba(255,106,0,0)}50%{outline:10px solid rgba(255,106,0,.12)}100%{outline:0 solid rgba(255,106,0,0)}}
 
-  /* transcript lane under logo */
+  /* transcript under logo */
   .transcript{
-    width:min(82vw,520px); margin:14px auto 8px;
+    width:min(82vw,520px); margin:14px auto 10px;
     background:linear-gradient(180deg,#151b22,#13181e);
     border:1px solid #232c36; color:#dfe7ef;
     border-radius:16px; min-height:56px; padding:12px 14px;
     box-shadow:0 8px 26px rgba(0,0,0,.32), inset 0 0 0 1px rgba(255,255,255,.03);
     display:flex; align-items:center; gap:10px;
   }
-  .dot{
+  .led{
     width:12px; height:12px;border-radius:50%;
     background:#6b7c8f; flex:0 0 auto;
     box-shadow:0 0 0 0 rgba(255,122,26,0);
     transition:background .25s ease, box-shadow .25s ease;
   }
-  .dot.live{
-    background:var(--accent);
-    box-shadow:0 0 0 6px rgba(255,122,26,.16), 0 0 22px 4px rgba(255,122,26,.35);
-  }
+  .led.live{background:var(--accent); box-shadow:0 0 0 6px rgba(255,122,26,.16), 0 0 22px 4px rgba(255,122,26,.35)}
   #asr{flex:1; font-size:18px; line-height:1.35; letter-spacing:.1px}
   #hint{color:#93a0ad}
 
-  /* quick actions */
+  /* chips */
   .chips{display:flex;gap:12px;justify-content:center;flex-wrap:wrap;margin:16px 0 10px}
-  .chip{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:18px;
-    background:#11161b;border:1px solid #23303a;color:#d9e3ec}
-  .chip svg{opacity:.9}
-
-  /* footer note */
+  .chip{display:inline-flex;align-items:center;gap:8px;padding:10px 14px;border-radius:18px;background:#11161b;border:1px solid #23303a;color:#d9e3ec}
   .note{color:#8191a2; font-size:13px; text-align:center; margin-top:18px}
+
+  /* === DRAWER MENU === */
+  #backdrop{
+    position:fixed; inset:0; background:rgba(0,0,0,.4);
+    opacity:0; pointer-events:none; transition:opacity .2s ease;
+  }
+  #menuDrawer{
+    position:fixed; top:0; right:-320px; width:min(86vw,320px); height:100%;
+    background:#0f1419; border-left:1px solid #1f2933; box-shadow:-20px 0 60px rgba(0,0,0,.5);
+    transition:right .25s ease; padding:18px;
+    display:flex; flex-direction:column; gap:8px; z-index:50;
+  }
+  #menuDrawer.open{ right:0 }
+  #backdrop.show{ opacity:1; pointer-events:auto }
+  .menu-title{font-weight:800;font-size:20px;margin:6px 2px 10px}
+  .menu-item{display:flex; align-items:center; gap:10px; padding:12px 10px; border-radius:12px; color:#dfe7ef; text-decoration:none; border:1px solid #1e2832; background:#111820}
+  .menu-item:hover{background:#14202a}
 </style>
 </head>
 <body>
+  <div id="backdrop"></div>
+  <aside id="menuDrawer" aria-label="Menu boczne" aria-hidden="true">
+    <div class="menu-title">Menu</div>
+    <a class="menu-item" href="#"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 12h16M4 6h16M4 18h16" stroke="#cfe2f3" stroke-width="2" stroke-linecap="round"/></svg> Przegląd</a>
+    <a class="menu-item" href="#"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 3l8 6v12H4V9l8-6Z" stroke="#cfe2f3" stroke-width="2" stroke-linejoin="round"/></svg> Zamówienia</a>
+    <a class="menu-item" href="#"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M12 15a3 3 0 1 0 0-6 3 3 0 0 0 0 6Z" stroke="#cfe2f3" stroke-width="2"/><path d="M12 3v3m0 12v3m9-9h-3M6 12H3m14.95 6.95-2.12-2.12M7.17 7.17 5.05 5.05m13.9 0-2.12 2.12M7.17 16.88l-2.12 2.12" stroke="#cfe2f3" stroke-width="2" stroke-linecap="round"/></svg> Ustawienia</a>
+    <a class="menu-item" href="#"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 20h16M6 4h12l-1 12H7L6 4Z" stroke="#cfe2f3" stroke-width="2"/></svg> Pomoc</a>
+  </aside>
+
   <div class="wrap">
     <header>
-      <div class="brand"><span class="dot">Free</span>Flow <span style="font-weight:500;font-size:16px;margin-left:10px;color:#9fb0c2">Voice to order</span></div>
+      <div class="brand"><span class="em">Free</span>Flow <span style="font-weight:500;font-size:16px;margin-left:10px;color:#9fb0c2">Voice to order</span></div>
       <div class="top-actions">
         <button class="btn-icon" aria-label="Menu" id="menuBtn">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="none"><path d="M4 6h16M4 12h16M4 18h16" stroke="#cfe2f3" stroke-width="2" stroke-linecap="round"/></svg>
@@ -101,28 +109,19 @@
     <h1>Złóż zamówienie</h1>
     <div class="sub">Taxi, posiłek, a może nocleg?</div>
 
-    <!-- LOGO BUTTON -->
     <section class="hero">
       <button id="micBtn" aria-label="Mów teraz"></button>
     </section>
 
-    <!-- TRANSCRIPT UNDER LOGO -->
     <div class="transcript" id="transcriptBox" aria-live="polite" aria-atomic="true">
-      <span class="dot" id="dot"></span>
+      <span class="led" id="led"></span>
       <div id="asr"><span id="hint">Dotknij logo i mów…</span></div>
     </div>
 
-    <!-- Quick category chips -->
     <div class="chips">
-      <div class="chip">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 12h18M6 7h12M8 17h8" stroke="#ffca7a" stroke-width="2" stroke-linecap="round"/></svg> Jedzenie
-      </div>
-      <div class="chip">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 17h18l-3-6h-5l-3 6Z" stroke="#ffca7a" stroke-width="2" stroke-linejoin="round"/></svg> Taxi
-      </div>
-      <div class="chip">
-        <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 20V9l8-5 8 5v11H4Z" stroke="#ffca7a" stroke-width="2" stroke-linejoin="round"/></svg> Hotel
-      </div>
+      <div class="chip"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 12h18M6 7h12M8 17h8" stroke="#ffca7a" stroke-width="2" stroke-linecap="round"/></svg> Jedzenie</div>
+      <div class="chip"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M3 17h18l-3-6h-5l-3 6Z" stroke="#ffca7a" stroke-width="2" stroke-linejoin="round"/></svg> Taxi</div>
+      <div class="chip"><svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 20V9l8-5 8 5v11H4Z" stroke="#ffca7a" stroke-width="2" stroke-linejoin="round"/></svg> Hotel</div>
     </div>
 
     <p class="note">Demo: Web Speech API (rozpoznawanie + mowa). Najlepiej działa w Chrome.</p>
@@ -130,13 +129,33 @@
 
 <script>
 (() => {
+  // Drawer
+  const menuBtn = document.getElementById('menuBtn');
+  const drawer  = document.getElementById('menuDrawer');
+  const backdrop= document.getElementById('backdrop');
+
+  function openDrawer(){
+    drawer.classList.add('open');
+    drawer.setAttribute('aria-hidden','false');
+    backdrop.classList.add('show');
+  }
+  function closeDrawer(){
+    drawer.classList.remove('open');
+    drawer.setAttribute('aria-hidden','true');
+    backdrop.classList.remove('show');
+  }
+  menuBtn.addEventListener('click', openDrawer);
+  backdrop.addEventListener('click', closeDrawer);
+  drawer.addEventListener('click', (e)=>{ if(e.target.closest('a')) closeDrawer(); });
+  window.addEventListener('keydown', (e)=>{ if(e.key==='Escape') closeDrawer(); });
+
+  // Voice
   const micBtn = document.getElementById('micBtn');
   const asrEl  = document.getElementById('asr');
   const hintEl = document.getElementById('hint');
-  const dot    = document.getElementById('dot');
+  const led    = document.getElementById('led');
   const transcriptBox = document.getElementById('transcriptBox');
 
-  // Web Speech
   const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
   const synth = window.speechSynthesis;
   let rec, listening = false, finalText = '';
@@ -147,57 +166,36 @@
     u.lang = 'pl-PL'; u.rate=1; u.pitch=1; u.volume=1;
     synth.cancel(); synth.speak(u);
   }
-
   function ensureSR(){
     if(rec) return true;
     if(!SR){ asrEl.textContent = 'Twoja przeglądarka nie wspiera rozpoznawania mowy.'; return false; }
     rec = new SR();
-    rec.lang = 'pl-PL';
-    rec.interimResults = true;
-    rec.continuous = false;
+    rec.lang = 'pl-PL'; rec.interimResults = true; rec.continuous = false;
 
     rec.onstart = () => {
-      listening = true;
-      micBtn.classList.add('listening');
-      dot.classList.add('live');
-      hintEl && hintEl.remove();
-      asrEl.innerHTML = '<em>Nasłuchuję… mów proszę.</em>';
+      listening = true; micBtn.classList.add('listening'); led.classList.add('live');
+      hintEl && hintEl.remove(); asrEl.innerHTML = '<em>Nasłuchuję… mów proszę.</em>';
     };
-
     rec.onresult = (ev) => {
       let interim = '';
       for(const res of ev.results){
         const txt = res[0].transcript;
-        if(res.isFinal){ finalText += txt + ' '; }
-        else{ interim += txt; }
+        if(res.isFinal){ finalText += txt + ' '; } else { interim += txt; }
       }
       asrEl.textContent = (finalText + interim).trim();
     };
-
-    rec.onerror = (e) => {
-      asrEl.textContent = 'Błąd: ' + e.error;
-    };
-
+    rec.onerror = (e) => { asrEl.textContent = 'Błąd: ' + e.error; };
     rec.onend = () => {
-      micBtn.classList.remove('listening');
-      dot.classList.remove('live');
-      listening = false;
-
+      micBtn.classList.remove('listening'); led.classList.remove('live'); listening = false;
       const heard = asrEl.textContent.trim();
       if(heard){
-        // proste odpowiedzi demo
         let reply = '';
         const lower = heard.toLowerCase();
-        if(lower.includes('pizza') || lower.includes('pepperoni')){
-          reply = 'Zamawiam dwie pizze pepperoni. Czy dodać sos?';
-        }else if(lower.includes('taxi')){
-          reply = 'Zamawiam taxi. Podaj proszę adres odbioru.';
-        }else if(lower.includes('hotel') || lower.includes('nocleg')){
-          reply = 'Szukam hotelu. Jakie daty przyjazdu i wyjazdu?';
-        }else{
-          reply = 'Rozumiem. Zaraz to ogarnę.';
-        }
-        setTimeout(() => speak(reply), 200);
+        if(lower.includes('pizza')) reply = 'Zamawiam pizzę. Dodać sos?';
+        else if(lower.includes('taxi')) reply = 'Zamawiam taxi. Podaj adres odbioru.';
+        else if(lower.includes('hotel') || lower.includes('nocleg')) reply = 'Szukam hotelu — jakie daty?';
+        else reply = 'Rozumiem. Zaraz to ogarnę.';
+        setTimeout(()=>speak(reply), 200);
       }else{
         asrEl.innerHTML = '<span id="hint">Dotknij logo i mów…</span>';
       }
@@ -205,18 +203,12 @@
     };
     return true;
   }
-
   micBtn.addEventListener('click', () => {
     if(!ensureSR()) return;
     if(listening){ try{ rec.stop(); }catch{} return; }
-    finalText = '';
-    asrEl.textContent = '';
-    rec.start();
+    finalText = ''; asrEl.textContent = ''; rec.start();
   });
-
-  // pozwól zakończyć nasłuch po drugiej pauzie/kliknięciu w transkrypcję
   transcriptBox.addEventListener('click', () => { if(listening) try{ rec.stop(); }catch{} });
-
 })();
 </script>
 </body>
